
* InsetRef now supports starred commands. The starred commands stop hyperref from
  creating a link (and are only available when hyperref is used). There is a 
  checkbox "No Hyperlink" for this purpose.

* Alt-Escape can be used to 'float' and redock widgets like the table of contents
  or source view.

* Edit > Paste operation now preserves newlines in text by default.


!!Documents compilation process and images conversion

* LyX now uses utf8 encoding per default for all languages. This does
  not affect existing documents. Note that LyX also does not touch
  personal defaults and templates. That is to say, if you still see
  traditional encoding preset for new documents, you can change that
  by selecting "Unicode (utf8) [default]" and hitting "Save as
  Documents Defaults" afterwards. Your personal templates need to be
  changed manually if desired.

* LyX defaults to the "HE8" LaTeX font encoding with Hebrew if the
  "Culmus" LaTeX fonts are installed.

* Documents that use TeX fonts can only be compiled with XeTeX if the input
  encoding is set to "utf8-plain" or "ascii".

* With LyXHTML output, there are now different CSS classes generated for
  different depths: enumi, enumii, enumiii, and enumiv, and similarly for
  itemize: lyxitemi, etc. There is also a new HTMLClass tag, which makes it
  easier to provide specific classes for paragraphs.

* HTML support has been updated to output XHTML5 files. A major change is the
  use of XML entities instead of HTML ones (e.g., LyX now outputs &#45;
  instead of &quot;).

* DocBook support has been revamped and now targets DocBook 5 (i.e.
  only XML, SGML is gone). Some supporting files for the previous
  implementation have been removed: all examples (lib/examples),
  some layouts (existing documents should still work, but with a
  DocBook 5 output instead of DocBook 4 SGML). The dependency on
  sgmltools has been removed, this new support is always enabled.