@@ -53,6 +53,9 @@
 
 * Edit > Paste operation now preserves newlines in text by default.
 
+* Dark mode on Windows is possible now by choosing "fusion" user interface style
+  in the user interface preferences dialog, your system style has to be set to dark.
+
 
 !!Documents compilation process and images conversion
 
